# CPP-34-Netologie-

БД/Продвинутая выбокра данных/: агрегаты_и_соединения.sql  заполнение_таблицы.sql  простые_SELECT_запросы.sql
БД/Работа с SQL/: musick.sql
БП/Курсовая работа(доработка)/RaceSimulator/: .gitignore  CMakeLists.txt
БП/Курсовая работа(доработка)/RaceSimulator/RaceSimulatorLib/: RaceSimulatorLib.sln
БП/Курсовая работа(доработка)/RaceSimulator/RaceSimulatorLib/RaceSimulatorClient/: CMakeLists.txt
БП/Курсовая работа(доработка)/RaceSimulator/RaceSimulatorLib/RaceSimulatorClient/RaceSimulatorClient/: RaceSimulatorClient.vcxproj  main.cpp
БП/Курсовая работа(доработка)/RaceSimulator/RaceSimulatorLib/RaceSimulatorLib/: AirVehicle.cpp  AirVehicle.h  CMakeLists.txt  GroundVehicle.cpp  GroundVehicle.h  Race.cpp  Race.h  RaceSimulatorLib.vcxproj  RaceSimulatorLib.vcxproj.filters  Vehicle.cpp  Vehicle.h
БП/Тестирование/ExtArrayProject/: CMakeLists.txt
БП/Тестирование/ExtArrayProject/include/: ExtArray.h
БП/Тестирование/ExtArrayProject/src/: ExtArray.cpp
БП/Тестирование/ExtArrayProject/tests/: CMakeLists.cpp  CMakeLists.txt
МиАП/Потокобезопасная очередь/Потокобезопасная очередь/: Потокобезопасная очередь.sln
МиАП/Сетевое программирование/Сетевое программирование/: CMakeLists.txt  Сетевое программирование.sln
МиАП/многопоточность/многопоточность/: многопоточность.sln
ПП/Move-семантика/большие числа/: .gitignore  большие числа.sln
ПП/Move-семантика/перемещение объектов/: перемещение объектов.sln
ПП/STL . 1/задание 1/: задание 1.sln
ПП/STL . 1/задание 2/: задание 2.sln
ПП/STL . 2/Печать контейнера/: Печать контейнера.sln
ПП/STL . 2/Уникальный вектор/: Уникальный вектор.sln
ПП/Жизненный цикл объекта.RAII/Умный массив/: Умный массив.sln
ПП/Жизненный цикл объекта.RAII/копирование умных массивов/: копирование умных массивов.sln
ПП/Исправление ошибок/: Исправление ошибок.sln
ПП/Исправление ошибок/Исправление ошибок/: Исправление ошибок.cpp  Исправление ошибок.vcxproj  Исправление ошибок.vcxproj.filters
ПП/Курсовая/Курсовая работа INI/: Курсовая работа INI.sln
ПП/Тестирование/задание 1/: CMakeLists.txt  list.h  main.cpp
ПП/Тестирование/задание 2/: CMakeLists.txt  main.cpp
ПП/Умные указатели/Клонирование объекта класса/: .gitignore  Клонирование объекта класса.sln
ПП/Умные указатели/Устрвненниее пересечения/: Устрвненниее пересечения.sln
ПП/Шаблоны и функторы/Задание 1/: Задание 1.sln
ПП/Шаблоны и функторы/Задание 2/: Задание 2.sln
ПП/Шаблоны и функторы/Задание 3/: Задание 3.sln
(+120 files in other folders)
